--- a/app/src/main/res/menu/menu_languages.xml
+++ b/app/src/main/res/menu/menu_languages.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/settingEng"
-        android:title="English" />
+        android:title="@string/english" />
 
     <item
         android:id="@+id/settingCh"
-        android:title="Chinese" />
+        android:title="@string/chinese" />
+
 </menu>
