--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,20 +14,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/dbs"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:textColor="@color/black"/>
 
     <Button
         android:id="@+id/buttonOCBC"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/ocbc"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:textColor="@color/black"/>
 
     <Button
         android:id="@+id/buttonUOB"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/uob"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:textColor="@color/black"/>
 
 </LinearLayout>
